<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settingdialog.SettingDialogFragment"
    android:background="@drawable/sky">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/settings_card_background"
        android:backgroundTint="#1fffffff">




            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="36dp"
                android:text="@string/choose_notification"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/Notification_Radio_Group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/notification_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:buttonTint="@color/white"       />

                <RadioButton
                    android:id="@+id/Alarm_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Alarm"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:buttonTint="@color/white"
                    />
            </RadioGroup>


        <TextView
            android:id="@+id/setup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_location"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Notification_Radio_Group"
            app:layout_constraintStart_toStartOf="@+id/Notification_Radio_Group"
            app:layout_constraintTop_toBottomOf="@+id/Notification_Radio_Group" />

            <RadioGroup
                android:id="@+id/location_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/setup_text"
                app:layout_constraintStart_toStartOf="@+id/setup_text"
                app:layout_constraintTop_toBottomOf="@+id/setup_text">

                <RadioButton
                    android:id="@+id/gps_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:buttonTint="@color/white"
                    android:text="@string/gps"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/map_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/map"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="224dp" />


            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
