<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.1"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/language_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/settings_card_background"
            android:backgroundTint="#3fffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tempreture_card_view">

            <TextView
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card_background"
                android:backgroundTint="#2fffffff"
                android:paddingVertical="10dp"
                android:paddingStart="20sp"
                android:text="@string/Language"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/language_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2">

                <RadioButton
                    android:id="@+id/english_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/English"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/arabic_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Arabic"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Tempreture_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/settings_card_background"
            android:backgroundTint="#3fffffff"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_card_view">

            <TextView
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card_background"
                android:backgroundTint="#2fffffff"
                android:paddingVertical="10dp"
                android:paddingStart="20sp"
                android:text="@string/Temprature"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/Temperature_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3">

                <RadioButton
                    android:id="@+id/celsius_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Celsius"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/kelvin_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Kelvin"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/fahrenhit_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/white"
                    android:text="@string/Fahrenheit"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wind_speed_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/settings_card_background"
            android:backgroundTint="#3fffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_card_view">

            <TextView
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card_background"
                android:backgroundTint="#2fffffff"
                android:paddingVertical="10dp"
                android:paddingStart="20sp"
                android:text="@string/WindSpeed"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/WindSpeed_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4">


                <RadioButton
                    android:id="@+id/Wind_meter_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/windSpeed"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/Wind_mile_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/WindSpeed2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notification_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/settings_card_background"
            android:backgroundTint="#3fffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card_background"
                android:backgroundTint="#2fffffff"
                android:paddingVertical="10dp"
                android:paddingStart="20sp"
                android:text="@string/alert"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/Notification_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button6">

                <RadioButton
                    android:id="@+id/notification_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Notification"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/Alarm_radio_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Alarm"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="411dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/settings_card_background"
            android:backgroundTint="#3fffffff"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_card_view">


            <TextView
                android:id="@+id/button"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card_background"
                android:backgroundTint="#2fffffff"
                android:paddingVertical="10dp"
                android:paddingStart="20sp"
                android:text="@string/Location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/LocationGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button">

                <RadioButton
                    android:id="@+id/gps_radio_btn"

                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/white"
                    android:text="@string/GPS"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/Map_radio_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/Map"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:text="Settings"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>